feat: Add new academic references and expand the related research table.

--- a/index.qmd
+++ b/index.qmd
@@ -2,11 +2,11 @@
 
 ### **Latar Belakang**
 
-Dalam satu dekade terakhir, pendidikan keamanan siber telah bergeser dari metode pembelajaran pasif ke pendekatan praktis yang lebih interaktif. Perubahan ini didorong oleh tingginya kebutuhan industri akan tenaga ahli yang mampu menghadapi ancaman digital yang semakin kompleks. Salah satu metode pembelajaran yang efektif dan diadopsi secara global adalah kompetisi *Capture The Flag* (CTF). CTF adalah kompetisi keamanan siber di mana peserta, baik individu maupun tim, bersaing menyelesaikan tantangan di berbagai kategori keamanan untuk mengumpulkan poin. Tantangan ini dirancang menyerupai kerentanan dunia nyata (*real-world vulnerabilities*) untuk mengasah kemampuan *hacking*, pemecahan masalah, dan kerja sama tim [@CTF101_Intro]. Selain mempelajari teori, peserta juga dilatih berpikir kritis melalui kategori seperti kriptografi, *reverse engineering*, eksploitasi web, dan forensik digital.
+Dalam satu dekade terakhir, pendidikan keamanan siber telah bergeser dari metode pembelajaran pasif ke pendekatan praktis yang lebih interaktif [@Svabensky2020_CTF_Skills; @PMC_Cybercompetitions_Survey]. Perubahan ini didorong oleh tingginya kebutuhan industri akan tenaga ahli yang mampu menghadapi ancaman digital yang semakin kompleks. Salah satu metode pembelajaran yang efektif dan diadopsi secara global adalah kompetisi *Capture The Flag* (CTF). CTF adalah kompetisi keamanan siber di mana peserta, baik individu maupun tim, bersaing menyelesaikan tantangan di berbagai kategori keamanan untuk mengumpulkan poin. Tantangan ini dirancang menyerupai kerentanan dunia nyata (*real-world vulnerabilities*) untuk mengasah kemampuan *hacking*, pemecahan masalah, dan kerja sama tim [@CTF101_Intro]. Selain mempelajari teori, peserta juga dilatih berpikir kritis melalui kategori seperti kriptografi, *reverse engineering*, eksploitasi web, dan forensik digital.
 
 Salah satu platform *open-source* modern yang mendukung kompetisi ini adalah GZCTF. Dibangun menggunakan kerangka kerja ASP.NET Core, GZCTF menawarkan skalabilitas tinggi berkat integrasi dengan Docker dan Kubernetes [@GitHub_GZCTF]. Platform ini memiliki fitur unggulan seperti *dynamic flag* yang diinjeksikan via *environment variable*, sistem skor dinamis, serta pemantauan log aktivitas secara *real-time* menggunakan SignalR [@Microsoft_SignalR_Overview]. Meskipun memiliki fitur teknis yang canggih, GZCTF—seperti kebanyakan platform CTF lainnya—masih menghadapi masalah mendasar terkait integritas dan kejujuran akademik peserta.
 
-Kecurangan dalam kompetisi CTF telah menjadi isu serius yang mencederai nilai sportivitas, baik di ranah akademik maupun profesional. Bentuk kecurangan yang umum meliputi *flag sharing* (berbagi *flag* antar tim), kolaborasi ilegal, plagiarisme *write-up* atau kode, hingga penggunaan bantuan AI yang tidak diizinkan pada ctf tertentu [@SemanticScholar_ChatGPT_CTF]. Dalam konteks akademik, kecurangan ini berdampak vital karena skor kompetisi sering digunakan sebagai parameter penilaian kompetensi mahasiswa. Sayangnya, tanpa sistem deteksi otomatis, penyelenggara terpaksa mengandalkan pemeriksaan log manual yang tidak efisien dan rentan terhadap *human error*.
+Kecurangan dalam kompetisi CTF telah menjadi isu serius yang mencederai nilai sportivitas, baik di ranah akademik maupun profesional [@CEURWS_CTF_CheatDetection; @Vykopal2020_CTF_Benefits]. Bentuk kecurangan yang umum meliputi *flag sharing* (berbagi *flag* antar tim), kolaborasi ilegal, plagiarisme *write-up* atau kode, hingga penggunaan bantuan AI yang tidak diizinkan pada ctf tertentu [@SemanticScholar_ChatGPT_CTF]. Dalam konteks akademik, kecurangan ini berdampak vital karena skor kompetisi sering digunakan sebagai parameter penilaian kompetensi mahasiswa. Sayangnya, tanpa sistem deteksi otomatis, penyelenggara terpaksa mengandalkan pemeriksaan log manual yang tidak efisien dan rentan terhadap *human error*.
 
 Saat ini, kemampuan deteksi kecurangan di GZCTF masih terbatas pada pemantauan log *submission* yang reaktif dan juga *dynamic flag* yang diinjeksikan via *environment variable* [@GZCTF_Dynamic_Flag]. Admin dapat melihat riwayat jawaban dan alamat IP, tetapi tidak ada sistem analisis otomatis yang mampu menghubungkan titik-titik data tersebut menjadi profil risiko yang utuh [@GitHub_GZCTF]. Sebagai ilustrasi, dua tim dengan alamat IP yang sama belum tentu curang; mereka mungkin menggunakan jaringan yang sama (NAT/VPN). Namun, jika kesamaan IP ini dibarengi dengan *User-Agent* yang identik dan waktu penyelesaian yang hampir bersamaan, indikasi kolaborasi ilegal menjadi sangat kuat [@PMC_CSD_Collusion].
 
@@ -60,13 +60,13 @@ Luaran dari penelitian ini diharapkan dapat memberikan kontribusi nyata bagi ber
 
 ### **Penelitian Sebelumnya**
 
-Topik mengenai deteksi kecurangan dan plagiarisme terus berkembang dalam riset rekayasa perangkat lunak. Berbagai metode telah dikembangkan, mulai dari analisis atribut sederhana hingga pemodelan graf yang kompleks. Salah satu metode fundamental yang banyak digunakan adalah *Longest Common Subsequence* (LCS) [@LCS_Greenberg]. Algoritma ini terbukti efektif dalam mengenali kesamaan urutan karakter antar dataset, yang berguna untuk mendeteksi plagiarisme di mana pelaku mencoba menyamarkan jejak dengan modifikasi kecil tanpa mengubah logika urutan utama [@LCS_Greenberg].
+Topik mengenai deteksi kecurangan dan plagiarisme terus berkembang dalam riset rekayasa perangkat lunak. Berbagai metode telah dikembangkan, mulai dari analisis atribut sederhana hingga pemodelan graf yang kompleks. Salah satu metode fundamental yang banyak digunakan adalah *Longest Common Subsequence* (LCS) [@LCS_Greenberg]. Algoritma ini terbukti efektif dalam mengenali kesamaan urutan karakter antar dataset, yang berguna untuk mendeteksi plagiarisme di mana pelaku mencoba menyamarkan jejak dengan modifikasi kecil tanpa mengubah logika urutan utama [@LCS_Greenberg; @SciELO_BIOPLAG].
 
 Sementara LCS berfokus pada aspek sekuensial, penelitian terbaru oleh Travieso et al. (2024) mengenai *Jaccard Similarity* menyoroti pentingnya pendekatan analitis dalam pengukuran kesamaan himpunan. Indeks Jaccard menawarkan metrik yang kuat untuk membandingkan proporsi elemen yang beririsan antara dua himpunan data tanpa bergantung pada urutan entri [@travieso2024analyticalapproachjaccardsimilarity]. Dalam konteks kompetisi, metode ini sangat relevan untuk mendeteksi kesamaan *set of problems* yang diselesaikan oleh peserta, melengkapi analisis urutan yang dilakukan oleh LCS.
 
 Penggunaan metode deteksi tunggal seringkali memiliki celah yang dapat dimanfaatkan oleh peserta, semisal penggunaan VPN untuk menyamarkan IP ataupun modifikasi kecil pada urutan tantangan yang diselesaikan. Oleh karena itu, penelitian ini menggabungkan analisis *Jaccard Similarity* dan *LCS* dalam kerangka kerja *Confidence Screening Detector* (CSD) untuk mendeteksi pola kolaborasi ilegal (*collusion*) secara lebih akurat [@PMC_CSD_Collusion].
 
-Di sisi lain, untuk memverifikasi identitas aktor di balik layar, teknologi *web fingerprinting* menjadi komponen vital. Penelitian komprehensif mengumpulkan berbagai metode pemanfaatan atribut peramban (Canvas, WebGL, AudioContext) untuk membuat tanda tangan unik perangkat tanpa bergantung pada *cookies*, yang memungkinkan sistem mendeteksi manipulasi identitas jaringan oleh peserta [@GitHub_WebFingerprinting; @GitHub_CreepJS].
+Di sisi lain, untuk memverifikasi identitas aktor di balik layar, teknologi *web fingerprinting* menjadi komponen vital. Penelitian komprehensif mengumpulkan berbagai metode pemanfaatan atribut peramban (Canvas, WebGL, AudioContext) untuk membuat tanda tangan unik perangkat tanpa bergantung pada *cookies*, yang memungkinkan sistem mendeteksi manipulasi identitas jaringan oleh peserta [@Browser_Fingerprinting; @Inria_BrowserFingerprinting; @GitHub_WebFingerprinting; @GitHub_CreepJS].
 
 Seluruh indikator tersebut—baik dari analisis kesamaan solusi maupun jejak perangkat—kemudian diintegrasikan menggunakan model *Weighted Risk Scoring*. Konsep ini memungkinkan penggabungan parameter yang heterogen (seperti *flag sharing*, kesamaan IP, dan nilai *similarity*) menjadi satu metrik risiko terpadu yang dinamis. Dengan pendekatan ini, bobot pelanggaran dapat disesuaikan (misal: *Stolen Flag* lebih berat daripada *Unknown IP*), menghasilkan deteksi yang objektif dan mengurangi ketergantungan pada inspeksi manual.
 
@@ -77,6 +77,18 @@ Seluruh indikator tersebut—baik dari analisis kesamaan solusi maupun jejak per
 
 | Halm & Rivas (2023) | Collusion Detector | Metode skrining kepercayaan untuk mendeteksi kolaborasi tes. | Validasi konsep deteksi kolaborasi. [@PMC_CSD_Collusion] |
 | Abraham Juliot (2024) | Web Fingerprinting Research | Kompendium metode fingerprinting browser modern dan analisis bot. | Basis teknik deteksi identitas perangkat. [@GitHub_WebFingerprinting; @GitHub_CreepJS] |
+| Burket et al. (2015) | Automatic Problem Generation | Generasi soal otomatis untuk mengurangi flag sharing di CTF. | Basis pencegahan kecurangan via dynamic challenges. [@Vykopal2020_CTF_Benefits] |
+| Chetwyn & Erdődi (2021) | CTF Cheat Detection | Pendekatan automated cyber threat hunting untuk deteksi kecurangan. | Validasi metode deteksi real-time di CTF. [@CEURWS_CTF_CheatDetection] |
+| Langebein et al. (2023) | Data Mining Collusion | Pendekatan data mining untuk mendeteksi kolusi pada ujian online. | Validasi metode CSD untuk clustering. [@EDM_Collusion_Detection] |
+| Lin et al. (2023) | Stylistic Browser Fingerprinting | Fingerprinting berbasis CSS tanpa JavaScript untuk bypass anti-fingerprint. | Basis lanjutan teknik identifikasi perangkat. [@Browser_Fingerprinting] |
+| Laperdrix et al. (2020) | Browser Fingerprinting Survey | Survei komprehensif teknik fingerprinting browser dan countermeasures. | Landasan teoritis web fingerprinting. [@Inria_BrowserFingerprinting] |
+| Švábenský et al. (2021) | CTF Skills Analysis | Analisis keterampilan keamanan siber yang diajarkan melalui CTF. | Validasi efektivitas CTF sebagai alat pembelajaran. [@Svabensky2020_CTF_Skills] |
+| Balon & Baggili (2023) | Cybercompetitions Survey | Survei kompetisi, tools, dan sistem untuk pendidikan keamanan siber. | Konteks platform dan ekosistem CTF. [@PMC_Cybercompetitions_Survey] |
+| Pieterse (2024) | ChatGPT Impact on CTF | Analisis dampak AI generatif terhadap kompetisi CTF. | Tantangan baru dalam deteksi kecurangan berbasis AI. [@SemanticScholar_ChatGPT_CTF] |
+| Küppers et al. (2019) | Digital Exam Fraud | Identifikasi kecurangan pada ujian digital. | Metode dasar deteksi fraud di lingkungan online. [@EUNIS_Cheating_Detection] |
+| Erdem & Karabatak (2025) | Deep Learning Cheating | Deteksi kecurangan menggunakan deep learning dan machine learning. | Potensi pengembangan sistem dengan ML/DL. [@MDPI_DeepLearning_Cheating] |
+| Peng (2024) | Clustering Collusion Detection | Perbandingan metode clustering untuk deteksi kolusi grup. | Validasi pendekatan GBT dan Spectral Clustering. [@EDM_Clustering_Collusion] |
+| Amirzhanov et al. (2025) | Plagiarism Detection Survey | Survei sistematis algoritma deteksi plagiarisme dalam analisis teks. | Landasan teori metode similarity detection. [@Frontiers_PlagiarismSurvey] |
 
 Tabel di atas menunjukkan bahwa meskipun setiap metode memiliki kelebihan masing-masing, terdapat kebutuhan nyata untuk menggabungkan kecepatan analisis vektor dengan ketajaman analisis struktural, serta melengkapinya dengan pemantauan perilaku untuk mendapatkan sistem deteksi kecurangan yang benar-benar efektif dan tangguh [@GitHub_GZCTF].
 
@@ -84,7 +96,7 @@ Tabel di atas menunjukkan bahwa meskipun setiap metode memiliki kelebihan masing
 
 ### **Platform GZCTF dan Arsitektur ASP.NET Core**
 
-GZCTF adalah platform Capture The Flag open-source yang dirancang untuk mendukung kompetisi keamanan siber modern. Platform ini dibangun menggunakan kerangka kerja ASP.NET Core, yang merupakan framework lintas platform berperforma tinggi dari Microsoft. Keunggulan ASP.NET Core terletak pada arsitektur pipeline middleware-nya yang modular. Middleware adalah komponen perangkat lunak yang dirangkai ke dalam pipa permintaan aplikasi untuk menangani permintaan dan tanggapan [@Microsoft_Middleware]. Pipeline ini memungkinkan pengembang untuk menyisipkan logika khusus, seperti autentikasi, logging, dan deteksi kecurangan, tanpa harus memodifikasi logika bisnis utama dari aplikasi tersebut [@Microsoft_Middleware].
+GZCTF adalah platform Capture The Flag open-source yang dirancang untuk mendukung kompetisi keamanan siber modern. Platform ini dibangun menggunakan kerangka kerja ASP.NET Core, yang merupakan framework lintas platform berperforma tinggi dari Microsoft. Keunggulan ASP.NET Core terletak pada arsitektur pipeline middleware-nya yang modular. Middleware adalah komponen perangkat lunak yang dirangkai ke dalam pipa permintaan aplikasi untuk menangani permintaan dan tanggapan [@Microsoft_Middleware]. Pipeline ini memungkinkan pengembang untuk menyisipkan logika khusus, seperti autentikasi, logging, dan deteksi kecurangan, tanpa harus memodifikasi logika bisnis utama dari aplikasi tersebut [@Microsoft_Middleware;].
 
 GZCTF menggunakan PostgreSQL sebagai sistem manajemen basis data relasional untuk menyimpan data pengguna, tantangan, dan setiap submission flag [@GitHub_GZCTF]. Integrasi dengan kontainerisasi seperti Docker memungkinkan platform untuk meluncurkan tantangan secara dinamis dan mengisolasi lingkungan setiap peserta, yang sangat penting untuk mencegah gangguan antar tim [@GitHub_GZCTF]. Dalam konteks deteksi kecurangan, data log dari PostgreSQL dan aktivitas real-time dari SignalR menjadi sumber data primer untuk dianalisis oleh mesin deteksi yang diusulkan [@Microsoft_SignalR_Overview].
 
@@ -96,7 +108,7 @@ Deteksi kolaborasi antar tim dilakukan dengan menganalisis pola urutan penyelesa
 LCS digunakan untuk mencari urutan terpanjang dari ID tantangan yang diselesaikan secara bersamaan oleh dua tim [@LCS_Greenberg]. Jika Tim A menyelesaikan soal {1, 3, 5, 7} dan Tim B menyelesaikan {1, 2, 3, 5, 7}, maka LCS mereka adalah {1, 3, 5, 7} dengan panjang 4. Skor kesamaan dihitung berdasarkan rasio panjang LCS terhadap total soal yang diselesaikan.
 
 **Confidence Screening Detector (CSD)**
-Metode CSD digunakan untuk mengelompokkan tim yang dicurigai melakukan kolaborasi (*collusion groups*) berdasarkan tingkat kepercayaan atau *confidence*. Algoritma ini menggunakan metrik "Doubt" untuk mengukur seberapa besar kemungkinan seorang peserta (examinee) bukan merupakan bagian dari kelompok kolusi [@PMC_CSD_Collusion]. Semakin kecil nilai *doubt*, semakin besar kemungkinan peserta tersebut adalah anggota kelompok kolusi. Proses skrining dilakukan secara iteratif (*single forward screening*) untuk menemukan batas cutoff yang optimal di mana perbedaan nilai *doubt* mengalami lonjakan signifikan.
+Metode CSD digunakan untuk mengelompokkan tim yang dicurigai melakukan kolaborasi (*collusion groups*) berdasarkan tingkat kepercayaan atau *confidence* [@EDM_Collusion_Detection; @EDM_Clustering_Collusion]. Algoritma ini menggunakan metrik "Doubt" untuk mengukur seberapa besar kemungkinan seorang peserta (examinee) bukan merupakan bagian dari kelompok kolusi [@PMC_CSD_Collusion]. Semakin kecil nilai *doubt*, semakin besar kemungkinan peserta tersebut adalah anggota kelompok kolusi. Proses skrining dilakukan secara iteratif (*single forward screening*) untuk menemukan batas cutoff yang optimal di mana perbedaan nilai *doubt* mengalami lonjakan signifikan.
 
 ### **Konsep Weighted Risk Scoring dan Normalisasi**
 
@@ -383,7 +395,7 @@ Sistem akan diuji secara komprehensif melalui tiga fase pengujian:
 Sistem deteksi kecurangan ini diharapkan dapat memberikan hasil konkret berupa:
 
 1. **Aplikasi Middleware**: Sebuah komponen perangkat lunak siap pakai yang dapat diintegrasikan dengan mudah ke platform GZCTF manapun.
-2. **Peningkatan Deteksi**: Mampu mendeteksi minimal 90% kasus flag sharing dan plagiarisme teks pada dataset simulasi [@PMC_CSD_Collusion].
+2. **Peningkatan Deteksi**: Mampu mendeteksi minimal 90% kasus flag sharing dan plagiarisme teks pada dataset simulasi, dengan potensi peningkatan menggunakan pendekatan *machine learning* [@PMC_CSD_Collusion; @MDPI_DeepLearning_Cheating].
 3. **Efisiensi Admin**: Mengurangi waktu yang dibutuhkan admin untuk meninjau kecurangan hingga 70% dibandingkan dengan metode peninjauan log manual.
 4. **Skor Risiko Akurat**: Menyediakan sistem penilaian yang transparan dan dapat dipertanggungjawabkan secara logis melalui normalisasi skor risiko [@PMC_CSD_Collusion].
 
