--- a/references.bib
+++ b/references.bib
@@ -97,6 +97,21 @@ ABSTRACT={Plagiarism in academic and creative writing continues to be a signific
       url={https://arxiv.org/abs/2410.16436}, 
 }
 
+@inproceedings{EDM_Clustering_Collusion,
+ abstract = {Test collusion occurs when examinees have prior access to a subset of items (compromised items) administered on a live test form. We compared three types of test collusion detection methods: ddClone, Spectral Clustering and Generalized Binomial Test (GBT) clustering method on real data. Results show that GBT clustering has higher power and higher type I error rates, ddClone has moderate power and type I error rates, Spectral Cluster has relatively higher power and the lowest type I error rates for two sets of real data.},
+ address = {Atlanta, Georgia, USA},
+ author = {Luyao Peng},
+ booktitle = {Proceedings of the 17th International Conference on Educational Data Mining},
+ doi = {10.5281/zenodo.12729989},
+ editor = {Benjamin PaaÃŸen and Carrie Demmans Epp},
+ isbn = {978-1-7336736-5-5},
+ month = {July},
+ pages = {893--897},
+ publisher = {International Educational Data Mining Society},
+ title = {Comparing Clustering Methods in Group-level Test Collusion Detection},
+ year = {2024}
+}
+
 
 @misc{Microsoft_SignalR_Overview,
   title = "Overview of ASP.NET Core SignalR | Microsoft Learn",
@@ -152,4 +167,140 @@ ABSTRACT={Plagiarism in academic and creative writing continues to be a signific
   author = "abrahamjuliot",
   url = "https://github.com/abrahamjuliot/creepjs",
   note = {Accessed: 2026-01-30}
+}
+
+@article{Svabensky2020_CTF_Skills,
+   title={Cybersecurity knowledge and skills taught in capture the flag challenges},
+   volume={102},
+   ISSN={0167-4048},
+   url={http://dx.doi.org/10.1016/j.cose.2020.102154},
+   DOI={10.1016/j.cose.2020.102154},
+   journal={Computers &amp; Security},
+   publisher={Elsevier BV},
+   author={Švábenský, Valdemar and Čeleda, Pavel and Vykopal, Jan and Brišáková, Silvia},
+   year={2021},
+   month=mar, pages={102154} }
+
+@inproceedings{Vykopal2020_CTF_Benefits,
+author = {Vykopal, Jan and \v{S}v\'{a}bensk\'{y}, Valdemar and Chang, Ee-Chien},
+title = {Benefits and Pitfalls of Using Capture the Flag Games in University Courses},
+year = {2020},
+isbn = {9781450367936},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3328778.3366893},
+doi = {10.1145/3328778.3366893},
+abstract = {The concept of Capture the Flag (CTF) games for practicing cybersecurity skills is widespread in informal educational settings and leisure-time competitions. However, it is not much used in university courses. This paper summarizes our experience from using jeopardy CTF games as homework assignments in an introductory undergraduate course. Our analysis of data describing students' in-game actions and course performance revealed four aspects that should be addressed in the design of CTF tasks: scoring, scaffolding, plagiarism, and learning analytics capabilities of the used CTF platform. The paper addresses these aspects by sharing our recommendations. We believe that these recommendations are useful for cybersecurity instructors who consider using CTF games for assessment in university courses and developers of CTF game frameworks.},
+booktitle = {Proceedings of the 51st ACM Technical Symposium on Computer Science Education},
+pages = {752–758},
+numpages = {7},
+keywords = {summative assessment, plagiarism, learning analytics, homework assignment, educational data mining, cybersecurity, capture the flag},
+location = {Portland, OR, USA},
+series = {SIGCSE '20}
+}
+
+@ARTICLE{PMC_Cybercompetitions_Survey,
+  title     = "Cybercompetitions: A survey of competitions, tools, and systems
+               to support cybersecurity education",
+  author    = "Balon, Tyler and Baggili, Ibrahim Abe",
+  abstract  = "Over the last decade, industry and academia have worked towards
+               raising students' interests in cybersecurity through game-like
+               competitions to fill a shortfall of cybersecurity professionals.
+               Rising interest in video games in combination with gamification
+               techniques make learning fun, easy, and addictive. It is crucial
+               that cybersecurity curricula enhance and expose cybersecurity
+               education to a diversified student body to meet workforce
+               demands. Gamification through cybercompetitions is one method to
+               achieve that. With a vast list of options for competition type,
+               focus areas, learning outcomes, and participant experience
+               levels we need to systematize knowledge of attributes that
+               ameliorate cybercompetitions. In the wake of the COVID-19
+               pandemic and global lock-downs, competition hosts scrambled to
+               move platforms from local to online infrastructure due to poor
+               interoperability between competition software. We derive a list
+               of takeaways including the lack of interoperability between
+               state-of-the-art competition systems, breaking the high
+               knowledge barrier to participate, addressing competition type
+               diversity, then suggest potential solutions and research
+               questions moving forward. Our paper aims to systematize
+               cybersecurity, access control, and programming competitions by
+               surveying the history of these events. We explore the types of
+               competitions that have been hosted and categorize them based on
+               focus areas related to the InfoSEC Color Wheel. We then explore
+               state-of-the-art technologies that enable these types of
+               competitions, and finally, present our takeaways.",
+  journal   = "Educ. Inf. Technol. (Dordr.)",
+  publisher = "Springer Science and Business Media LLC",
+  volume    =  28,
+  number    =  9,
+  pages     = "1--33",
+  month     =  feb,
+  year      =  2023,
+  keywords  = "CCDC; CPTC; Capture the flag; Collegiate clubs; Cybersecurity;
+               Gamification; Hacking competition",
+  copyright = "https://www.springernature.com/gp/researchers/text-and-data-mining",
+  language  = "en"
+}
+
+@inproceedings{EDM_Collusion_Detection,
+ abstract = {Due to the precautionary measures during the COVID-19 pandemic many universities offered unproctored take-home exams. We propose methods to detect potential collusion between students and apply our approach on event log data from take-home exams during the pandemic. We find groups of students with suspiciously similar exams. In addition, we compare our findings to a proctored comparison group. By this, we establish a rule of thumb for evaluating which cases are ``outstandingly similar'', i.e., suspicious cases.},
+ address = {Bengaluru, India},
+ author = {Janine Langebein and Till Massing and Jens Klenke and Michael Striewe and Michael Goedicke and Christoph Hanck and Natalie Reckmann},
+ booktitle = {Proceedings of the 16th International Conference on Educational Data Mining},
+ doi = {10.5281/zenodo.8115649},
+ editor = {Mingyu Feng and Tanja KÃ¤ser and Partha Talukdar},
+ isbn = {978-1-7336736-4-8},
+ month = {July},
+ pages = {6--16},
+ publisher = {International Educational Data Mining Society},
+ title = {A Data Mining Approach for Detecting Collusion in Unproctored Online Exams},
+ year = {2023}
+}
+@inproceedings{EUNIS_Cheating_Detection,
+  title={Cheating Detection: Identifying Fraud in Digital Exams},
+  author={Bastian K{\"u}ppers and Julia Opgen-Rhein and Thomas Eifert and Ulrik Schroeder},
+  year={2019},
+  url={https://api.semanticscholar.org/CorpusID:199431037}
+}
+
+@article{CEURWS_CTF_CheatDetection,
+  title={Cheat detection in cyber security capture the flag games-an automated cyber threat hunting approach},
+  author={Chetwyn, Robert A and Erd{\H{o}}di, L{\'a}szl{\'o}},
+  journal={Proceedings of the 28th C\&ESAR},
+  pages={175},
+  year={2021}
+  url={https://ceur-ws.org/Vol-3056/paper-11.pdf}
+}
+
+@article{SciELO_BIOPLAG,
+  title={BIOPLAG: An Approach to Detect Programming Plagiarism},
+  author={Gomes, Kaio P and Matos, Simone N and Bini, Tarcizio Alexandre},
+  journal={Anais da Academia Brasileira de Ci{\^e}ncias},
+  volume={95},
+  number={3},
+  pages={e20220684},
+  year={2023},
+  publisher={SciELO Brasil},
+  url = {https://www.scielo.br/j/aabc/a/xHY458hGmzcQ4MLmFBPrKnM/}
+}
+@article{MDPI_DeepLearning_Cheating,
+  title={Cheating detection in online exams using deep learning and machine learning},
+  author={Erdem, Bahaddin and Karabatak, Murat},
+  journal={Applied Sciences},
+  volume={15},
+  number={1},
+  pages={400},
+  year={2025},
+  publisher={MDPI},
+  url = {https://www.mdpi.com/2076-3417/15/1/400}
+
+}
+
+@misc{Inria_BrowserFingerprinting,
+  title = {Browser Fingerprinting: A Survey},
+  author = {Laperdrix, Pierre and Bielova, Nataliia and Baudry, Benoit and Avoine, Gildas},
+  year = {2020},
+  journal = {ACM Transactions on the Web},
+  doi = {10.1145/3386040},
+  url = {https://www-sop.inria.fr/members/Nataliia.Bielova/papers/Lape-etal-20-TWEB.pdf}
 }
