--- a/references.bib
+++ b/references.bib
@@ -268,7 +268,7 @@ series = {SIGCSE '20}
   author={Chetwyn, Robert A and Erd{\H{o}}di, L{\'a}szl{\'o}},
   journal={Proceedings of the 28th C\&ESAR},
   pages={175},
-  year={2021}
+  year={2021},
   url={https://ceur-ws.org/Vol-3056/paper-11.pdf}
 }
 
