feat: Add a cover page, update document title and author, and refine introduction content with new citations and styling.

--- a/references.bib
+++ b/references.bib
@@ -304,3 +304,11 @@ series = {SIGCSE '20}
   doi = {10.1145/3386040},
   url = {https://www-sop.inria.fr/members/Nataliia.Bielova/papers/Lape-etal-20-TWEB.pdf}
 }
+
+@misc{OWASP_Broken_Access_Control,
+  title = {A01:2025 – Broken Access Control | OWASP Top 10 Structure and Content},
+  author = {OWASP},
+  year = {2025},
+  url = {https://owasp.org/Top10/2025/A01_2025-Broken_Access_Control/},
+  note = {Accessed: 2026-01-31}
+}
