--- a/cover.qmd
+++ b/cover.qmd
@@ -1,6 +1,5 @@
 ::: {.content-visible when-format="html"}
 <br><br><br>
-:::
 
 ::: {style="text-align: center"}
 
@@ -8,7 +7,7 @@
 
 <br>
 
-**PERANCANGAN SISTEM PENDETEKSI KECURANGAN PADA PLATFORM ZCTF MENGGUNAKAN ALGORITMA TWO-STAGE SIMILARITY ANALYSIS DAN WEIGHTED RISK SCORING**
+**PERANCANGAN SISTEM PENDETEKSI KECURANGAN PADA PLATFORM GZCTF MENGGUNAKAN ALGORITMA TWO-STAGE SIMILARITY ANALYSIS DAN WEIGHTED RISK SCORING**
 
 <br><br><br>
 
@@ -38,3 +37,4 @@ Dimas Maulana (2215354026)
 :::
 
 {{< pagebreak >}}
+:::
