--- a/cover.tex
+++ b/cover.tex
@@ -6,7 +6,7 @@
 
 \vspace{1.5cm}
 
-\textbf{\LARGE PERANCANGAN SISTEM PENDETEKSI KECURANGAN PADA PLATFORM ZCTF MENGGUNAKAN ALGORITMA TWO-STAGE SIMILARITY ANALYSIS DAN WEIGHTED RISK SCORING}
+\textbf{\LARGE PERANCANGAN SISTEM PENDETEKSI KECURANGAN PADA PLATFORM GZCTF MENGGUNAKAN ALGORITMA TWO-STAGE SIMILARITY ANALYSIS DAN WEIGHTED RISK SCORING}
 
 \vspace{1.5cm}
 
