--- a/index.qmd
+++ b/index.qmd
@@ -129,6 +129,28 @@ GZCTF adalah platform Capture The Flag open-source yang dirancang untuk mendukun
 
 GZCTF menggunakan PostgreSQL sebagai sistem manajemen basis data relasional untuk menyimpan data pengguna, tantangan, dan setiap submission flag [@GitHub_GZCTF]. Integrasi dengan kontainerisasi seperti Docker memungkinkan platform untuk meluncurkan tantangan secara dinamis dan mengisolasi lingkungan setiap peserta, yang sangat penting untuk mencegah gangguan antar tim [@GitHub_GZCTF]. Dalam konteks deteksi kecurangan, data log dari PostgreSQL dan aktivitas real-time dari SignalR menjadi sumber data primer untuk dianalisis oleh mesin deteksi yang diusulkan [@Microsoft_SignalR_Overview].
 
+### **Teori Analisis Jaringan pada Deteksi Kecurangan**
+
+Analisis jaringan berfokus pada hubungan antar entitas teknis, terutama alamat IP, subnet, token unduhan, dan fingerprint browser. Tujuan utamanya adalah menemukan pola berbagi infrastruktur antar tim yang secara statistik tidak wajar.
+
+Secara umum, kesamaan jejak jaringan dua tim dapat dihitung dengan pendekatan himpunan:
+
+$$J_{IP}(A,B) = \frac{|IP_A \cap IP_B|}{|IP_A \cup IP_B|}$$
+
+Nilai $J_{IP}$ yang tinggi menunjukkan tumpang tindih infrastruktur jaringan antar tim. Untuk mengurangi *false positive* pada jaringan bersama (misalnya lab kampus/NAT), indikator ini harus dikombinasikan dengan fingerprint perangkat dan kedekatan waktu submission.
+
+### **Teori Analisis Perilaku Peserta**
+
+Analisis perilaku memeriksa dinamika aksi peserta selama kompetisi, bukan hanya hasil akhir submit. Indikator yang umum digunakan meliputi kecepatan penyelesaian, interval antar submit, pola burst, serta konsistensi alur kerja (*download/start container -> solve -> submit*).
+
+Dua metrik dasar yang digunakan adalah:
+
+$$ISI_i = t_i - t_{i-1}$$
+
+$$SV_{\Delta t} = \frac{N_{solve}(\Delta t)}{\Delta t}$$
+
+Dengan $ISI_i$ sebagai *inter-submit interval* dan $SV$ sebagai *solving velocity*. Nilai $ISI$ yang sangat kecil berulang kali, atau $SV$ sangat tinggi dalam jendela waktu sempit, menjadi sinyal anomali perilaku yang perlu diverifikasi.
+
 ### **Algoritma Sequence Similarity dan Confidence Screening Detector (CSD)**
 
 Deteksi kolaborasi antar tim dilakukan dengan menganalisis pola urutan penyelesaian soal (*Sequence of Solves*). Pendekatan ini lebih efektif dibandingkan analisis teks konten karena urutan penyelesaian sulit dimanipulasi secara kebetulan, terutama pada kompetisi dengan jumlah soal yang banyak.
@@ -137,6 +159,16 @@ Deteksi kolaborasi antar tim dilakukan dengan menganalisis pola urutan penyelesa
 LCS digunakan untuk mencari urutan terpanjang dari ID tantangan yang diselesaikan secara bersamaan oleh dua tim [@LCS_Greenberg]. Jika Tim A menyelesaikan soal {1, 3, 5, 7} dan Tim B menyelesaikan {1, 2, 3, 5, 7}, maka LCS mereka adalah {1, 3, 5, 7} dengan panjang 4. Skor kesamaan ($S_{seq}$) dihitung sebagai:
 
 $$S_{seq} = \frac{|LCS(Seq_A, Seq_B)|}{\min(|Seq_A|, |Seq_B|)}$$
+
+**Jaccard Similarity (Jacob/Jaccard)**
+Jaccard mengukur kesamaan himpunan soal yang diselesaikan tanpa memperhatikan urutan. Metode ini efektif untuk menangkap pola berbagi hasil ketika pelaku mengubah urutan submit agar lolos dari deteksi sekuensial.
+
+$$J(A,B) = \frac{|Solved_A \cap Solved_B|}{|Solved_A \cup Solved_B|}$$
+
+**Relative Sequence Index (RSI)**
+Untuk menyeimbangkan analisis urutan (LCS) dan himpunan (Jaccard), penelitian ini menggunakan RSI sebagai rata-rata harmonik:
+
+$$RSI = \frac{2 \cdot J \cdot S_{seq}}{J + S_{seq}}$$
 
 **Confidence Screening Detector (CSD)**
 Metode CSD digunakan untuk mengelompokkan tim yang dicurigai melakukan kolaborasi (*collusion groups*) berdasarkan tingkat kepercayaan atau *confidence* [@EDM_Collusion_Detection; @EDM_Clustering_Collusion]. Algoritma ini menggunakan metrik "Doubt" ($doubt_e$) untuk mengukur kemungkinan peserta bukan bagian dari kolusi. Nilai *doubt* dihitung berdasarkan akumulasi RSI (*Relative Sequence Index*):
@@ -154,6 +186,29 @@ $$R_{total} = \sum_{i=1}^{n} Weight(Event_i)$$
 Pendekatan ini memungkinkan penggabungan berbagai indikator teknis yang heterogen—seperti kesamaan IP, anomali waktu, dan pola *Browser Fingerprint*—menjadi satu metrik tunggal.
 
 Dengan metode ini, administrator dapat menetapkan ambang batas (*threshold*) intervensi yang dinamis, misalnya menetapkan status *flagged* jika total skor melebihi batas tertentu (misal: 100 poin) atau melakukan pemblokiran otomatis jika mencapai batas kritis.
+
+### **Confusion Matrix untuk Evaluasi Deteksi**
+
+Untuk mengukur keakuratan model deteksi kecurangan, hasil sistem dibandingkan dengan label kebenaran (*ground truth*) dari verifikasi manual panitia.
+
+- **True Positive (TP)**: Tim curang, terdeteksi curang.
+- **False Positive (FP)**: Tim jujur, terdeteksi curang.
+- **True Negative (TN)**: Tim jujur, tidak terdeteksi curang.
+- **False Negative (FN)**: Tim curang, tidak terdeteksi curang.
+
+Rumus metrik evaluasi:
+
+$$Accuracy = \frac{TP + TN}{TP + TN + FP + FN}$$
+
+$$Precision = \frac{TP}{TP + FP}$$
+
+$$Recall = \frac{TP}{TP + FN}$$
+
+$$F1 = \frac{2 \cdot Precision \cdot Recall}{Precision + Recall}$$
+
+$$Specificity = \frac{TN}{TN + FP}$$
+
+Dalam konteks anti-cheat, fokus evaluasi utama adalah menekan *false positive* (agar tim jujur tidak dirugikan) sambil menjaga *recall* tetap tinggi agar kasus curang tidak banyak lolos.
 
 ### **Keamanan Web dan Cross-Site Scripting (XSS)**
 
@@ -177,11 +232,67 @@ Model pengembangan sistem yang diadopsi adalah **Waterfall**. Model ini dipilih 
 4. **Pengujian**: Melakukan uji fungsionalitas (*Black Box*) dan uji akurasi algoritma menggunakan skenario simulasi kecurangan.
 5. **Evaluasi**: Mengumpulkan umpan balik pengguna (admin) melalui *User Acceptance Test* (UAT) untuk menilai efektivitas sistem.
 
+**Flowchart Metodologi Penelitian**
+
+```{mermaid}
+%%| fig-cap: "Flowchart Metodologi Penelitian"
+%%| label: fig-metodologi
+flowchart TD
+    A[Mulai Penelitian] --> B[Studi Literatur dan Rumusan Masalah]
+    B --> C[Pengumpulan Data Log GZCTF]
+    C --> D[Analisis Kebutuhan Sistem]
+    D --> E[Perancangan Arsitektur dan UML]
+    E --> F[Implementasi Middleware Anti-Cheat]
+    F --> G[Pengujian Fungsional dan Performa]
+    G --> H[Evaluasi Akurasi dengan Confusion Matrix]
+    H --> I{Target Kinerja Tercapai?}
+    I -- Tidak --> J[Perbaikan Bobot dan Threshold]
+    J --> F
+    I -- Ya --> K[Penyusunan Kesimpulan dan Laporan]
+    K --> L[Selesai]
+```
+
 ## **Analisis Kondisi Eksisting dan Kebutuhan Sistem**
 
 ### **Analisis Kondisi Eksisting pada Platform GZCTF**
 
 Observasi terhadap arsitektur GZCTF menunjukkan bahwa fitur pemantauan yang ada saat ini hanya berupa tampilan log *submission* *real-time* via WebSocket (SignalR) [@Microsoft_SignalR_Overview] dan sistem *Dynamic Container* yang dimiliki oleh GZCTF. Admin memang dapat melihat riwayat pengiriman *flag* dan *alert* ketika terjadi kecurangan pada sistem *Dynamic Flag* dan *Dynamic Container*, namun sistem tidak memberikan peringatan otomatis jika ada pola mencurigakan antar tim. Akibatnya, deteksi kecurangan diluar sistem "Dynamic Flag" dan "Dynamic Container" bergantung sepenuhnya pada kejelian admin memantau ribuan baris log—sebuah tugas yang mustahil dilakukan secara efektif pada kompetisi berskala besar. Selain itu, karena *database* hanya menyimpan log mentah, pencarian bukti kecurangan menuntut *query* manual yang rumit [@GitHub_GZCTF].
+
+### **Alur Manual Eksisting Peserta Saat Kompetisi**
+
+Pada kondisi existing, alur kerja peserta saat lomba umumnya masih linier: pilih soal, kerjakan, lalu submit flag dalam bentuk teks. Validasi anti-cheat kompleks belum berjalan otomatis, sehingga penilaian dugaan kecurangan banyak dilakukan manual oleh admin.
+
+```{mermaid}
+%%| fig-cap: "Flowchart Alur Existing User Saat Mengikuti Lomba CTF"
+%%| label: fig-existing-user-flow
+flowchart TD
+    A[User Login dan Join Tim] --> B[Buka Daftar Challenge]
+    B --> C[Pilih Challenge]
+    C --> D{Tipe Challenge?}
+    D -- Attachment --> E[Download File Soal]
+    D -- Container --> F[Start Container Instance]
+    D -- Static --> G[Langsung Analisis Soal]
+    E --> H[Analisis dan Eksploitasi]
+    F --> H
+    G --> H
+    H --> I[Submit Flag via Form Teks]
+    I --> J{Flag Benar?}
+    J -- Ya --> K[Skor Bertambah di Scoreboard]
+    J -- Tidak --> L[Coba Lagi]
+    L --> H
+    K --> M[Admin Monitoring Log Secara Manual]
+```
+
+**Contoh Format Soal dan Jawaban pada GZCTF (Existing)**
+
+| Jenis Soal | Contoh Prompt | Format Jawaban | Mekanisme Penilaian |
+| :--- | :--- | :--- | :--- |
+| **Web Exploitation** | "Temukan flag dari endpoint `/admin` yang rentan." | Teks flag, misal `CTF{...}` | Sistem mencocokkan string flag |
+| **Reverse Engineering** | "Analisis binary dan temukan output flag." | Teks flag, misal `FLAG{...}` | Sistem mencocokkan string flag |
+| **Forensics Attachment** | "Unduh file `.pcap` lalu temukan kredensial." | Teks flag | Sistem mencocokkan string flag |
+| **Pwn/Container** | "Eksploitasi service di container." | Teks flag dinamis | Sistem mencocokkan flag per instance |
+
+Pada implementasi GZCTF, jawaban utama berbentuk **teks flag** (bukan pilihan ganda). Karena itu, potensi kecurangan lebih sering muncul sebagai *flag sharing*, bukan menyalin opsi jawaban seperti pada ujian pilihan ganda.
 
 ### **Kebutuhan Fungsional Sistem Baru**
 
@@ -338,21 +449,86 @@ Penjelasan Alur:
 
 ### **Perancangan Algoritma Similarity dan Risk Scoring**
 
-**Sequence Similarity (LCS) & CSD**
+Implementasi deteksi kolusi disusun sebagai pipeline berlapis: LCS (urutan), Jaccard (himpunan), CSD (screening grup), lalu agregasi *Weighted Risk Scoring*.
 
-Implementasi algoritma *Sequence Similarity* akan menggunakan formula yang mengacu pada rumus LCS dan Jaccard yang telah dipaparkan di Bab II. Sistem akan menjalankan *periodic job* setiap 5 menit untuk mengambil snapshot data *submission* dan melakukan proses komputasi kesamaan antar tim.
+**Flowchart Longest Common Subsequence (LCS)**
 
-**Logika Komputasi:**
-1.  **Extract**: Ambil data submission {Time, ChallengeID} per tim.
-2.  **Sort**: Urutkan berdasarkan waktu.
-3.  **Compute**: Hitung LCS dan Jaccard Index untuk setiap pasangan tim $(T_A, T_B)$.
-4.  **Validate**: Gunakan CSD untuk memfilter *false positive* dengan *threshold* dinamis.
+```{mermaid}
+%%| fig-cap: "Flowchart Perhitungan LCS"
+%%| label: fig-flow-lcs
+flowchart TD
+    A[Input Seq A dan Seq B] --> B[Bentuk matriks DP]
+    B --> C[Isi matriks berdasarkan aturan LCS]
+    C --> D[Traceback untuk ambil urutan LCS]
+    D --> E[Hitung panjang LCS]
+    E --> F[Normalisasi jadi S_seq]
+    F --> G[Simpan skor pasangan tim]
+```
 
-**Weighted Risk Scoring Formula**
+**Flowchart Jaccard Similarity (Jacob/Jaccard)**
 
-Penentuan skor risiko total dilakukan menggunakan formula sumasi bobot yang telah dijelaskan pada Landasan Teori (Bab II). Pada tahap perancangan ini, fokus utama adalah menetapkan konfigurasi bobot (*weight tuning*) yang akan diterapkan pada sistem.
+```{mermaid}
+%%| fig-cap: "Flowchart Perhitungan Jaccard Similarity"
+%%| label: fig-flow-jaccard
+flowchart TD
+    A[Input Solved Set Tim A dan Tim B] --> B[Hitung irisan]
+    B --> C[Hitung gabungan]
+    C --> D[Hitung J = irisan/gabungan]
+    D --> E{J >= Threshold?}
+    E -- Ya --> F[Tandai pasangan mirip]
+    E -- Tidak --> G[Tandai pasangan normal]
+```
 
-Tabel berikut merinci bobot penalti eksperimental yang diusulkan. Nilai bobot ini ditentukan secara heuristik dan akan diuji validitasnya pada tahap pengujian parameter:
+**Flowchart Confidence Screening Detector (CSD)**
+
+```{mermaid}
+%%| fig-cap: "Flowchart Confidence Screening Detector (CSD)"
+%%| label: fig-flow-csd
+flowchart TD
+    A[Input matriks RSI antar tim] --> B[Bentuk kandidat grup S]
+    B --> C[Hitung doubt tiap anggota]
+    C --> D{doubt <= cutoff?}
+    D -- Ya --> E[Pertahankan anggota]
+    D -- Tidak --> F[Keluarkan anggota dari grup]
+    E --> G{Ada perubahan grup?}
+    F --> G
+    G -- Ya --> C
+    G -- Tidak --> H[Output collusion group final]
+```
+
+**Flowchart Weighted Risk Scoring (WRS)**
+
+```{mermaid}
+%%| fig-cap: "Flowchart Weighted Risk Scoring"
+%%| label: fig-flow-wrs
+flowchart TD
+    A[Input Suspicion Events] --> B[Map event ke bobot rule]
+    B --> C[Agregasi total skor risiko]
+    C --> D[Normalisasi skor 0-100]
+    D --> E{Skor >= threshold?}
+    E -- Ya --> F[Flagged atau Auto Ban]
+    E -- Tidak --> G[Status Normal]
+    F --> H[Simpan log dan notifikasi admin]
+    G --> H
+```
+
+**Logika Komputasi Similarity**
+1. **Extract**: Ambil data submission `{Time, ChallengeID}` per tim.
+2. **Sort**: Urutkan berdasarkan waktu.
+3. **Compute**: Hitung `LCS`, `Jaccard`, lalu gabungkan menjadi `RSI`.
+4. **Validate**: Gunakan CSD untuk memfilter *false positive* pada level grup.
+
+**Formula Weighted Risk Scoring**
+
+Penentuan skor risiko total dilakukan menggunakan formula sumasi bobot:
+
+$$R_{total} = \sum_{i=1}^{n} Weight(Event_i)$$
+
+Untuk kebutuhan dashboard, skor dapat dinormalisasi:
+
+$$R_{norm} = \min\left(100, \frac{R_{total}}{R_{max}} \times 100\right)$$
+
+Tabel berikut merinci bobot penalti eksperimental yang diusulkan. Nilai bobot ditentukan secara heuristik dan akan diuji validitasnya pada tahap pengujian parameter:
 
 | Rule Code | Bobot | Deskripsi |
 | :--- | :--- | :--- |
@@ -417,7 +593,16 @@ erDiagram
     }
 ```
  
-## **Rancangan Implementasi dan Pengujian Penelitian***
+## **Rancangan Penerapan dan Pengujian Penelitian**
+
+### **Penerapan Sistem pada GZCTF**
+
+Penerapan sistem dilakukan tanpa mengubah alur inti validasi flag GZCTF. Strategi penerapan difokuskan pada penambahan komponen *middleware* dan *background analyzer* agar integrasi tetap aman serta mudah dipelihara.
+
+1. **Integrasi Middleware**: Menyisipkan *Anti-Cheat Middleware* setelah autentikasi untuk menangkap metadata submission secara real-time.
+2. **Penerapan Analyzer Asinkron**: Menjalankan analisis LCS, Jaccard, CSD, dan WRS dalam *scheduled job* agar tidak membebani jalur request utama.
+3. **Sinkronisasi Dashboard**: Menyalurkan hasil deteksi ke dashboard admin melalui API internal dan kanal notifikasi real-time.
+4. **Hardening Keamanan**: Menambahkan validasi input dan sanitasi payload agar proses deteksi tidak membuka celah serangan baru.
 
 ### **Lingkungan Pengembangan**
 
@@ -435,12 +620,32 @@ Proses pembangunan aplikasi mengikuti urutan logis rekayasa perangkat lunak:
 1. **Pengembangan Middleware**: Membuat class *Cheat Detection Middleware* dan *Router* untuk komunikasi antar backend deteksi dan dashboard frontend [@Microsoft_Middleware].
 2. **Mesin Analisis Similarity**: Membangun algoritma LCS, Jaccard Index, dan CSD Screening dalam C# untuk membandingkan pola submission antar tim secara efisien [@LCS_Greenberg].
 3. **Mesin Penilaian Risiko**: Mengimplementasikan logika *Weighted Scoring* dalam service C# yang melakukan kueri ke database log [@PMC_CSD_Collusion].
-5. **Tambahan Fitur**: Menambahkan fitur-fitur tambahan seperti pengecekan *Browser Fingerprint* dan sumber download tantangan untuk memvalidasi *collusion group*.
-4. **Pembangunan Dashboard**: Mengembangkan antarmuka monitoring menggunakan React (sesuai frontend GZCTF) yang menampilkan metrik risiko secara visual.
+4. **Tambahan Fitur**: Menambahkan fitur-fitur tambahan seperti pengecekan *Browser Fingerprint* dan sumber download tantangan untuk memvalidasi *collusion group*.
+5. **Pembangunan Dashboard**: Mengembangkan antarmuka monitoring menggunakan React (sesuai frontend GZCTF) yang menampilkan metrik risiko secara visual.
 
 ### **Skenario Pengujian**
 
 Pengujian dilakukan untuk memvalidasi akurasi logika deteksi dan performa sistem di bawah beban kerja.
+
+**Metode Pengukuran Keakuratan Deteksi Kecurangan**
+
+Keakuratan deteksi diukur dengan membandingkan hasil sistem terhadap *ground truth* dari investigasi manual panitia/dosen pengampu.
+
+1. **Siapkan Dataset Berlabel**: Kumpulkan log kompetisi dan beri label `Curang` atau `Tidak Curang` berdasarkan bukti investigasi.
+2. **Jalankan Sistem Deteksi**: Eksekusi pipeline anti-cheat untuk menghasilkan prediksi otomatis per tim.
+3. **Bangun Confusion Matrix**: Hitung nilai TP, FP, TN, dan FN.
+4. **Hitung Metrik Evaluasi**: Gunakan rumus Accuracy, Precision, Recall, F1, dan Specificity (Bab II).
+5. **Tuning Threshold**: Ubah ambang WRS/RSI untuk menurunkan FP tanpa menurunkan Recall secara signifikan.
+6. **Validasi Ulang**: Uji ulang pada batch log berbeda untuk memastikan model stabil dan tidak *overfit*.
+
+| Prediksi \\ Aktual | Curang | Tidak Curang |
+| :--- | :---: | :---: |
+| **Curang** | TP | FP |
+| **Tidak Curang** | FN | TN |
+
+: Struktur Confusion Matrix Evaluasi Deteksi Kecurangan {#tbl-cm}
+
+Kriteria minimal yang ditargetkan pada penelitian ini adalah `Recall >= 0.90`, `Precision >= 0.85`, dan `False Positive Rate <= 0.10`.
 
 **1. Skenario Pengujian Akurasi & Fungsional**
 
